--- a/style.css
+++ b/style.css
@@ -88,13 +88,11 @@ a:hover {
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 0;
 }
 
 .texture-paper::before {
     background: url("img/texture-paper.png");
     background-size: 280px 280px;
-    z-index: 0;
 }
 
 .b-parallax {
@@ -287,6 +285,7 @@ a:hover {
 
 #bloc-1-hero h1 {
     font-size: 32px;
+    z-index: 100;
 }
 
 .navbar {
@@ -613,15 +612,20 @@ a {
     font-family: "helvetica";
     font-weight: 400;
     color: #575757!important;
+    z-index: 200;
 }
 
 .container {
     max-width: 1000px;
 }
-
+.title_bellow_paper
+{
+    position: relative;
+    z-index: 100;
+}
 .hero-bloc-text {
     font-size: 38px;
-    z-index: 200;
+
 }
 
 .hero-bloc-text-sub {
