--- a/style.css
+++ b/style.css
@@ -743,12 +743,12 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #F9DECD!important;
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #181E35!important;
 }
 
 .btn-atomic-tangerine:hover {
