Resizing the bigest pictures

--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,8 @@ a:hover {
 }
 
 .b-parallax {
-    background-attachment: fixed;
+    background: center fixed;
+    background-size: cover;
 }
 
 .d-bloc {
