--- a/css/style.css
+++ b/css/style.css
@@ -841,11 +841,11 @@ h4 {
 }
 
 .bg-banniere {
-    background-image: url("../img/la-chouette-agence-banniere_medium.webp");
+    background-image: url("../img/medium/la-chouette-agence-banniere_medium.webp");
 }
 
 .bg-presentation {
-    background-image: url("../img/image-de-presentation.webp");
+    background-image: url("../img/medium/image-de-presentation_medium.webp");
 }
 
 .citation q
@@ -866,6 +866,10 @@ h4 {
 @media all and (min-width: 767px)
 {
     .bg-banniere {
-        background-image: url("../img/la-chouette-agence-banniere.webp");
+        background-image: url("../img/large/la-chouette-agence-banniere.webp");
+    }
+
+    .bg-presentation {
+        background-image: url("../img/large/image-de-presentation.webp");
     }
 }
