--- a/css/style.css
+++ b/css/style.css
@@ -623,7 +623,10 @@ a {
     color:#1C1C1C!important;
     z-index: 200;
 }
-
+footer ul li a
+{
+    height: 48px!important;
+}
 .container {
     max-width: 1000px;
     margin: 0 auto!important;
