--- a/css/style.css
+++ b/css/style.css
@@ -623,10 +623,6 @@ a {
     color:#1C1C1C!important;
     z-index: 200;
 }
-footer ul li a
-{
-    padding: 16px 0;
-}
 .container {
     max-width: 1000px;
     margin: 0 auto!important;
@@ -635,6 +631,10 @@ footer ul li a
 .row
 {
     text-align: center;
+}
+footer
+{
+    padding: 40px 0;
 }
 
 footer nav.row
@@ -645,16 +645,11 @@ footer nav.row
 
 footer nav
 {
-    margin: 10px auto;
+    margin: 20px auto;
     padding: 0 50px;
 
 }
-footer nav.row ul, .caption
-{
-    width: 70%;
-    padding: 0;
-    margin: 15px auto;
-}
+
 
 footer nav
 {
