Set more accessible colors

--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ a:hover {
 
 .texture-paper::before {
     background: url("../img/texture-paper.webp");
+    opacity: 0;
     background-size: 280px 280px;
 }
 
@@ -556,16 +557,16 @@ a[data-lightbox]:hover img {
 }
 
 .close-lightbox {
-    color: #FFF;
+    color: rgba(0, 0, 0, .9);
     font-size: 30px;
     position: absolute;
     top: 20px;
     right: 20px;
     z-index: 20;
-    background: rgba(0, 0, 0, .5);
+    background: #ffffff;
     border: none;
     line-height: 30px;
-    padding: 0 9px 5px;
+    padding: 5px;
     opacity: 0.3;
 }
 
@@ -573,28 +574,26 @@ a[data-lightbox]:hover img {
 .next-lightbox:hover,
 .prev-lightbox:hover {
     opacity: 1.0;
-    color: #FFF;
 }
 
 .next-lightbox,
 .prev-lightbox {
     font-size: 20px;
     color: rgba(255, 255, 255, .9);
-    background: rgba(0, 0, 0, .5);
+    background: #ffffff;
     transition: all .2s ease-in-out;
     position: absolute;
     top: 45%;
     z-index: 1;
-    opacity: 0.4;
+    opacity: 0.8;
+    padding: 6px 13px 1px 13px;
 }
 
 .next-lightbox {
-    padding: 6px 8px 1px 13px;
     right: 25px;
 }
 
 .prev-lightbox {
-    padding: 6px 13px 1px 10px;
     left: 25px;
 }
 
@@ -647,14 +646,9 @@ footer nav
 {
     margin: 20px auto;
     padding: 0 50px;
-
-}
-
-
-footer nav
-{
     text-align: center;
 }
+
 
 .title
 {
@@ -775,7 +769,12 @@ h4 {
 
 .black-background {
     background-color: rgba(165, 147, 99, 0.9);
-    padding: 40px 40px 40px 40px;
+    padding: 40px;
+}
+
+.blue-background {
+    background-color: rgba(99, 147, 165, 0.6);
+    padding: 40px 20px;
 }
 
 .bold-link {
@@ -792,20 +791,20 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #c58e7a;
 }
 
 .tc-white {
     color: #FFF!important;
 }
 
-.btn-atomic-tangerine {
+.btn-atomic-tangerine:hover {
     background: #F3976C;
     color: #181E35!important;
 }
 
-.btn-atomic-tangerine:hover {
-    background: #c27956!important;
+.btn-atomic-tangerine {
+    background: #c27956;
     color: #FFFFFF!important;
 }
 
@@ -860,6 +859,7 @@ h4 {
 {
     padding: 0 30px;
 }
+
 
 @media all and (min-width: 767px)
 {
