--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("../img/texture-paper.webp");
+    background: url("../img/texture-paper.webp") rgba(0, 0, 0, 0.6);
     background-size: 280px 280px;
 }
 
