--- a/css/icons-fontawesome.css
+++ b/css/icons-fontawesome.css
@@ -1,27 +1,1 @@
-.fa-facebook:before{
-    content:"\f09a";
-}
-
-.fa-twitter:before{
-    content:"\f099";
-}
-
-.fa-instagram:before{
-    content:"\f16d";
-}
-
-.fa-dribbble:before{
-    content:"\f17d";
-}
-
-.fa-chevron-up:before{
-    content:"\f077";
-}
-
-.fa-chevron-right:before{
-    content:"\f054";
-}
-
-.fa-chevron-left:before{
-    content:"\f053";
-}
+.fa-facebook:before{content:"\f09a"}.fa-twitter:before{content:"\f099"}.fa-instagram:before{content:"\f16d"}.fa-dribbble:before{content:"\f17d"}.fa-chevron-up:before{content:"\f077"}.fa-chevron-right:before{content:"\f054"}.fa-chevron-left:before{content:"\f053"}
